# journeys

./: README.md
backend/: main.py  models.py  pyproject.toml
backend/tests/: test_main.py  test_models.py
backend/yamls/client-a/: client-a-thr-journey.yaml  client-a-tkr-journey.yaml
backend/yamls/client-b/: client-b-pkr-journey.yaml  client-b-thr-journey.yaml  client-b-tkr-journey.yaml
backend/yamls/mr/: mr-op-journey.yaml  mr-thr-journey.yaml  mr-tkr-journey.yaml
e2e/: pyproject.toml  pytest.ini  test_integration.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx
